--- a/HiwayGo_API/appsettings.json
+++ b/HiwayGo_API/appsettings.json
@@ -4,6 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
-}
+
+  },  
+    "ConnectionStrings": {
+      "PostgresConnection": "Host=localhost;Port=5432;Database=mydb;Username=myuser;Password=mypassword"
+    },
+    "AllowedHosts": "*"
+  }
