--- a/HiwayGo_API/appsettings.json
+++ b/HiwayGo_API/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
 
-  },  
-    "ConnectionStrings": {
-      "PostgresConnection": "Host=localhost;Port=5432;Database=mydb;Username=myuser;Password=mypassword"
-    },
+  },
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Port=5432;Database=myBus;Username=postgres;Password=admin"
+  },
     "AllowedHosts": "*"
   }
