--- a/HiwayGo_API/appsettings.json
+++ b/HiwayGo_API/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "PostgresConnection": "Host=localhost;Port=5432;Database=myBus;Username=postgres;Password=admin"
   },
-    "AllowedHosts": "*"
-  }
+  "Jwt": {
+    "Key": "ReplaceThisWithA_very_long_random_secret_key!",
+    "Issuer": "HiwayGo",
+    "Audience": "HiwayGoClients",
+    "ExpiresMinutes": 60
+  },
+  "AllowedHosts": "*"
+}
